--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,7 +2,7 @@
 # if you set it to "/" share icons won't work properly on production
 baseurl = "https://ps-cloudlabs.com/"  # Include trailing slash
 # title = "Clarity"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
-copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
+copyright = "ps-cloudlabs | Peter Summa"
 # canonifyurls = true
 
 theme = "hugo-clarity"
