--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,7 +1,7 @@
 # set `baseurl` to your root domain
 # if you set it to "/" share icons won't work properly on production
-#baseurl = "https://ps-cloudlabs.com/"  # Include trailing slash
-baseurl = "https://p3t35.github.io/ps-cloudlabs/"
+baseurl = "https://ps-cloudlabs.com/"  # Include trailing slash
+#baseurl = "https://p3t35.github.io/ps-cloudlabs/"
 # title = "Clarity"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
 copyright = "ps-cloudlabs | Peter Summa"
 # canonifyurls = true
