--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -24,7 +24,10 @@
   name = "linkedin"
   weight = 3
   url = "https://www.linkedin.com/in/peter-summa-9936851b0/"
-
+[[social]]
+  name = "rss"
+  weight = 4
+  url = "index.xml"
 
 # other supported social links
 # name = "youtube"
